force-app/main/default/objects/nFORCE__Data_Store__c/fields/nFORCE__Data_Source__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Data_Source__c</fullName>
    <description>Data Source will be &quot;Salesforce Org&quot; for analytics as all data comes from child orgs.  The Data Store object, however, is generic enough to hold data from additional sources such as the FDIC.</description>
    <inlineHelpText>Data Source will be &quot;Salesforce Org&quot; for analytics as all data comes from child orgs.  The Data Store object, however, is generic enough to hold data from additional sources such as the FDIC.</inlineHelpText>
    <label>Data Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce Org</fullName>
                <default>true</default>
                <label>Salesforce Org</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>