force-app/main/default/objects/nFORCE__Data_Store__c/fields/nFORCE__End_Date__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__End_Date__c</fullName>
    <description>End of the timeframe for the captured data.  If the aggregate data is captured daily, the start and end dates will be the same date.  If the aggregate data is for one week, the start and end date would be a week apart.</description>
    <inlineHelpText>End of the timeframe for the captured data.  If the aggregate data is captured daily, the start and end dates will be the same date.  If the aggregate data is for one week, the start and end date would be a week apart.</inlineHelpText>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>