force-app/main/default/objects/nFORCE__Data_Store__c/fields/nFORCE__Is_Dirty__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Is_Dirty__c</fullName>
    <description>Dirty?</description>
    <formula>OR(ISNULL(nFORCE__Send_Date_Time__c),LastModifiedDate &gt; nFORCE__Send_Date_Time__c)</formula>
    <inlineHelpText>Formula to determine if dirty</inlineHelpText>
    <label>Is Dirty</label>
    <type>Checkbox</type>
</CustomField>