force-app/main/default/objects/nFORCE__Data_Store__c/fields/nFORCE__Percent_1__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Percent_1__c</fullName>
    <description>This field is not user facing. This field is used for data storage for the CUSO and Business Intelligence features.</description>
    <label>Percent 1</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>