force-app/main/default/objects/nFORCE__Data_Store__c/fields/nFORCE__Send_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Send_Date_Time__c</fullName>
    <description>Send date and time</description>
    <inlineHelpText>Send date and time</inlineHelpText>
    <label>Send Date Time</label>
    <type>DateTime</type>
</CustomField>