force-app/main/default/objects/nFORCE__Data_Store__c/fields/nFORCE__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Start_Date__c</fullName>
    <description>The beginning of the timeframe for the captured data.</description>
    <inlineHelpText>The beginning of the timeframe for the captured data.</inlineHelpText>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>