force-app/main/default/objects/nFORCE__Data_Store__c/fields/nFORCE__Tags__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Tags__c</fullName>
    <description>A predefined list to assist in filtering on reports.</description>
    <inlineHelpText>A predefined list to assist in filtering on reports.</inlineHelpText>
    <label>Tags</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>User Analytics</fullName>
            </value>
            <value>
                <fullName>Login Count</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>