force-app/main/default/objects/nFORCE__Data_Store__c/fields/nFORCE__Timestamp__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Timestamp__c</fullName>
    <description>Timestamp is the time the analytic snapshot ran on the child org.</description>
    <inlineHelpText>Timestamp is the time the analytic snapshot ran on the child org.</inlineHelpText>
    <label>Timestamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>